# git-viewer

./: Cargo.toml  db.sqlite
.sqlx/: query-56e49c6c0b35749ac535a97f02a264e9f9fa86e3c2cfe284a3b973903c7c39e3.json  query-5ed32a4de28c72733b3c60a9dcaa54043a47982f35a0b87576b957f1b221204c.json  query-e513280b724ae086a6ca7de76819dc25423cca6a24d1f11a0dc2dd0b2278bcba.json
assets/: style.css
migrations/: 1_setup.sql
src/: index.rs  main.rs  repo.rs
src/http/: mod.rs
